[tool.poetry]
name = "tomlkit-extras"
version = "0.2.0"
description = "A Python package that extends the functionality of tomlkit, allowing for advanced manipulation, validation, and introspection of TOML files, including handling comments and nested structures"
authors = ["galactixx"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/galactixx/tomlkit-extras"
repository = "https://github.com/galactixx/tomlkit-extras"
keywords = [
    "toml",
    "tomlkit",
    "validation",
    "introspection"
]

[tool.poetry.dependencies]
python = ">=3.8"
tomlkit = ">=0.13.0"
pyrsistent = ">=0.20.0"
charset-normalizer = ">=3.3.2"
pathvalidate = ">=3.2.0"
typing_extensions = ">=4.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_unused_ignores = true
ignore_missing_imports = true
disable_error_code = ["unused-ignore"]